
    Checks & Agents:
    * New check mssql_counters.locks: Monitors locking related information of
      MSSQL tablespaces
    * Check_MK service is now able to output additional performance data
      user_time, system_time, children_user_time, children_system time
    * windows_updates agent plugin: Fetching data in background mode, caching
      update information for 30 minutes
    * FIX: mssql_counters checks now really only inventorize percentage based
      counters if a base value is set
    * Windows agent: output ullTotalVirtual and ullAvailVirtual (not yet
      being used by check)
    * Solaris agent: add <<<uptime>>> section (thanks to Daniel Roettgermann)

1.2.0p3:
    Mulitisite
    * Added "view" parameter to dashlet_pnpgraph webservice
    * FIX: BI: Assuming "OK" for hosts is now possible
    * FIX: Fixed error in makeuri() calls when no parameters in URL
    * FIX: Try out mode in view editor does not show context buttons anymore

    WATO
    * Added "profile" option to be configurable via browser
    * FIX: It is now possible to create clusters in empty folders
    * FIX: Fixed problem with complaining empty ListOf() valuespecs
    * FIX: Users & Contacts uses case-insensitive sorting of 'Full name' column  
    * FIX: Removed focus of "Full name" attribute on editing a contact
    * FIX: fix layout bug in ValueSpec ListOfStrings (e.g. used in
           list of explicit host/services in rules)

    BI:
    * FIX: Correct representation of (!), (!!) and (?) markers in check output

    Livestatus
    * FIX: comments_with_info in service table was always empty

    Checks & Agents:
    * FIX: Linux mk_logwatch: iregex Parameter was never used
    * FIX: Windows agent: quote '%' in plugin output correctly
    * FIX: multipath check now handles '-' in "user friendly names"

1.2.1i1:
    Core:
    * Allow to add options to rules. Currently the options "disabled" and
      "comment" are allowed. Options are kept in an optional dict at the