@@ -54,26 +54,65 @@ inventory_services = []
 #   ( ALL_HOSTS, [ "!Backup.*", "FooBar auto" ] ),
 # ]
 
-def inventory_windows_services(info):
+# Implemented in 1.2.1i2:
+# New rule-style (WATO compatible) notation:
+#   ( [ ENTRIES ], ALL_HOSTS),
+#
+# ENTRIES is a list of inventory_services definitions like this:
+#
+# (<service>, <state>, <start_mode>)
+#
+# <service> might be a string matching the service-name or a regex
+# <state> is the expected state to inventorize services of (running, stopped, ...)
+# <start_mode> is the expected state to inventorize services of (auto, manual, ...)
+#
+# All above attributes can be set to None to disable this filter option for the entry.
+#
+# Example:
+# inventory_services_rules = [
+#     ( [
+#           ('netmsg', None, 'auto'),    # Add monitoring if the service is found
+#                                        # and is automatically started
+#           ('mstsc',  'running', None), # Add monitoring if the service is found and running
+#           ('~MSSQL .*', None, None),   # Add all "MSSQL *" monitoring
+#           (None, None, 'auto'),  # Add monitoring of all automatically started services
+#       ], [ 'win2003' ], ALL_HOSTS),
+# ]
+inventory_services_rules = []
 
+def inventory_windows_services(info):
     # Handle single entries (type str)
     def add_matching_services(name, state, start_type, entry):
-        if ' ' in entry and len(entry.split()) == 2:
+        if type(entry) == tuple:
+            # New wato rule handling
+            svc  = entry[0]
+            statespec = entry[1:]
+
+        elif ' ' in entry and len(entry.split()) == 2:
             svc, statespec = entry.split()
+
         else:
             svc = entry
             statespec = "running"
 
-        # First match name
-        if svc.startswith("~"):
-            if not get_regex(svc[1:]).match(name):
+        # First match name (optional since rule based config option available)
+        if svc:
+            if svc.startswith("~"):
+                if not get_regex(svc[1:]).match(name):
+                    return []
+            elif svc != name:
                 return []
-        elif svc != name:
-            return []
 
-        for n in statespec.split("/"):
-            if n not in [ state, start_type ]:
+        if type(statespec) == tuple:
+            # New wato rule handling (always given as tuple of two)
+            if (statespec[0] and statespec[0] != state) \
+               or (statespec[1] and statespec[1] != start_type):
                 return []
+
+        else:
+            for n in statespec.split("/"):
+                if n not in [ state, start_type ]:
+                    return []
 
         return [(name, {})]
 
@@ -89,6 +128,18 @@ def inventory_windows_services(info):
                     matching += add_matching_services(name, state, start_type, svc)
         return matching
 
+    # Filter WATO compatible rules by tags/hostlist
+    rules = []
+    for rule in inventory_services_rules:
+        # e.g. [([('Netman', 'running', None)], [], ['@all'], {'docu_url': ''})]
+        # 1. Get all rules matching the current host
+        taglist, hostlist = rule[1:3]
+        if not hosttags_match_taglist(tags_of_host(g_hostname), taglist) \
+           or not in_extraconf_hostlist(hostlist, g_hostname):
+            continue
+
+        for entry in rule[0]:
+            rules.append(entry)
 
     inventory = []
     for line in info:
@@ -99,6 +150,9 @@ def inventory_windows_services(info):
             state = line[2]
             start_type = "unknown"
 
+        #
+        # Handle "old" inventory_services notation
+        #
         for entry in inventory_services:
             if type(entry) == str:
                 inventory += add_matching_services(name, state, start_type, entry)
@@ -106,6 +160,13 @@ def inventory_windows_services(info):
                 inventory += add_services_with_tags(name, state, start_type, entry)
             else:
                 raise MKGeneralException("Invalid entry %r in inventory_services" % entry)
+
+        #
+        # New WATO compatible rule matching
+        #
+
+        for rule in rules:
+            inventory += add_matching_services(name, state, start_type, rule)
 
     return inventory
 
