@@ -55,11 +55,13 @@
       user_time, system_time, children_user_time, children_system time
     * windows_updates agent plugin: Fetching data in background mode, caching
       update information for 30 minutes
-    * FIX: mssql_counters checks now really only inventorize percentage based
-      counters if a base value is set
     * Windows agent: output ullTotalVirtual and ullAvailVirtual (not yet
       being used by check)
     * Solaris agent: add <<<uptime>>> section (thanks to Daniel Roettgermann)
+    * Added new WATO configurable option inventory_services_rules for the
+      windows services inventory check
+    * FIX: mssql_counters checks now really only inventorize percentage based
+      counters if a base value is set
 
 1.2.0p3:
     Mulitisite
